Fix logo alignment bug

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -41,3 +41,7 @@ html {
 html::-webkit-scrollbar {
     display: none;
 }
+
+* {
+    border: 1px dotted red;
+}
